refine basic info

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Rebecca Butler - Portfolio</title>
+    <title>Sunny Gao - Portfolio</title>
 
     <!-- Bootstrap Core CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -55,9 +55,9 @@
             <div class="row">
                 <div class="col-lg-12">
                   <div class="intro-text">
-                        <span class="name">Rebecca Butler</span>
+                        <span class="name">Sunny Gao</span>
                         <hr class="star-light">
-                        <span class="skills">Software Developer - Roboticist - Engineering Student</span>
+                        <span class="skills">An diligent student, a passionate musician, an enthusiastic athlete, a creative artist, and a dedicated community volunteer</span>
                     </div>
                 </div>
             </div>
@@ -149,13 +149,11 @@
             </div>
             <div class="row">
                 <div class="col-lg-4 col-lg-offset-2">
-                    <p>I'm a fourth year Mechatronics Engineering student with experience in robotics, perception, and computer vision.
-                      I'm currently seeking a full-time position with a start date in June 2022. Don't hesitate to reach out if you want to chat!
+                    <p>I'm a 8th grade student. I like Math, Science, Social Study.
                       </p>
                 </div>
                 <div class="col-lg-4">
-                    <p>In addition to my strong programming skills and technical experience, I also bring dedication and passion to all my projects.
-                      In my spare time, I love reading mystery novels, crocheting, and playing video games.
+                    <p> I like playing violin, Guzheng, basketball, drawing, singing, dance and musical
                       </p>
                 </div>
             </div>
@@ -169,32 +167,16 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Education</h3>
-                        <p>University of Waterloo
-                          <br>BASc in Mechatronics Engineering
-                          <br>Artificial Intelligence Specialization
-                          <br>2017-2022</p>
+                        <p>Saint Andrew's Episcopal School 2021-2024 </p>
+                        <p>Christa McAuliffe Elementary School 2018-2021 </p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Contact</h3>
                         <ul class="list-inline">
                             <li>
-                                <a href="mailto:rebutler@uwaterloo.ca" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a>
-                            </li>
-                            <li>
-                                <a href="tel:647-832-6034" class="btn-social btn-outline"><i class="fa fa-fw fa-phone"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/rebecca-butler" class="btn-social btn-outline"><i class="fa fa-fw fa-github"></i></a>
-                            </li>
-                            <li>
-                                <a href="https://www.linkedin.com/in/rebecca-butler-81062b178/" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+                                <a href="mailto:imsunnygao@gmail.com" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a>
                             </li>
                         </ul>
-                    </div>
-                    <div class="footer-col col-md-4">
-                        <h3>My Resume</h3>
-                        <p>
-                          If you think I might be a good fit <br> for your company, please contact me <br> to see my resume.</p>
                     </div>
                 </div>
             </div>
@@ -203,7 +185,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-12">
-                        Copyright &copy; Rebecca Butler 2021
+                        Copyright &copy; Sunny Gao 2024
                     </div>
                 </div>
             </div>
