--- a/index.html
+++ b/index.html
@@ -165,13 +165,13 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-3">
-                        <h4>Education</h4>
+                    <div class="footer-col col-md-3 ml-md-auto">
+                        <h3>Education</h3>
                         <p>Saint Andrew's Episcopal School 2021-2024 </p>
                         <p>Christa McAuliffe Elementary School 2018-2021 </p>
                     </div>
-                    <div class="footer-col col-md-3">
-                        <h4>Contact</h4>
+                    <div class="footer-col col-md-3 ml-md-auto">
+                        <h3>Contact</h3>
                         <ul class="list-inline">
                             <li>
                                 <a href="mailto:imsunnygao@gmail.com" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a>
