--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2Fpcb.jpg?v=1566932214714" class="img-responsive" alt="">
+                        <img src="images/sunny_guzheng.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -101,7 +101,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2Fpothole.png?v=1566932359227" class="img-responsive" alt="">
+                        <img src="images/sunny_dance.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -111,7 +111,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2F69325534_705713326586717_5765167380611203072_n.jpg?v=1567026371502" class="img-responsive" alt="">
+                        <img src="images/sunny_basketball.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -121,7 +121,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2Fpiano%20bot%20resized.jpg?v=1566932598669" class="img-responsive" alt="">
+                        <img src="images/sunny_drawing.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -131,7 +131,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="https://cdn.hyperdev.com/us-east-1%3A0764790b-7e21-4437-ae79-1567df87f632%2Fgame.png?v=1468585809479" class="img-responsive" alt="">
+                        <img src="images/sunny_volunteer.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
             </div>
