--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/sunny_violin.jpg" class="img-responsive" alt="">
+                        <img src="images/sunny_guzheng.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
@@ -101,7 +101,7 @@
                                 <i class="fa fa-search-plus fa-3x"></i>
                             </div>
                         </div>
-                        <img src="images/sunny_violin.jpg" class="img-responsive" alt="">
+                        <img src="images/sunny_dance.jpg" class="img-responsive" alt="">
                     </a>
                 </div>
                 <div class="col-sm-4 portfolio-item">
