--- a/index.html
+++ b/index.html
@@ -219,10 +219,10 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>Magneto</h2>
+                            <h2>Guzheng Performance</h2>
                             <hr class="star-primary">
                             <video width="700px" controls muted>
-                               <source src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2FVID_20190724_162254.mp4?v=1567021599265" type="video/mp4">
+                               <source src="https://youtu.be/SBhm4epAFmU" type="video/mp4">
                             </video>
                             <p><br>Magneto is a robot designed to follow a path while detecting the polarity of hidden magnets.
                                When the robot detects a strong magnetic field, it stops and flashes the LED before continuing the course. <br><br>
