--- a/index.html
+++ b/index.html
@@ -221,10 +221,10 @@
                         <div class="modal-body">
                             <h2>Guzheng Performance</h2>
                             <hr class="star-primary">
-                            <video width="700px" controls muted>
-                               <!--<iframe width="560" height="315" src="https://www.youtube.com/embed/8KVh01Ofths?si=nOQWqvAB6lKt08X0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> -->
-                               <source src="https://www.youtube.com/embed/8KVh01Ofths?si=nOQWqvAB6lKt08X0" type="video/mp4"> 
-                            </video>
+                            <!-- <video width="700px" controls muted> -->
+                               <iframe width="560" height="315" src="https://www.youtube.com/embed/8KVh01Ofths?si=nOQWqvAB6lKt08X0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
+                               <!--<source src="https://www.youtube.com/embed/8KVh01Ofths?si=nOQWqvAB6lKt08X0" type="video/mp4"> --> 
+                            <!-- </video> -->
                             <p><br>Magneto is a robot designed to follow a path while detecting the polarity of hidden magnets.
                                When the robot detects a strong magnetic field, it stops and flashes the LED before continuing the course. <br><br>
                                I programmed the robot in C and soldered components on the PCB, including optical encoders and a hall-effect sensor.
