--- a/index.html
+++ b/index.html
@@ -223,21 +223,37 @@
                             <h4>The <a href="https://guzhengalive.com/guzheng-in-90-seconds">Guzheng</a> is a Chinese zither with 2500 years of history. Sunny started to learn Guzheng in since August 2022. </h4>
                             <hr class="star-primary">
                                <iframe width="560" height="315" src="https://www.youtube.com/embed/8KVh01Ofths?si=nOQWqvAB6lKt08X0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe> 
-                            <p><br>The Fight with the Typhoon is a famous Guzheng solo piece, a dramatic depiction of fight of the Shanghai harbour proletariat against the forces of nature, while protecting the property of the people and the Chinese communist government. Sunny performed it in the TCAAT Music Talent competition and won the 4th place.<br><br> 
-                            </p>
                             <ul class="list-inline item-details">
                                 <li>Date:
-                                    <strong>May - July 2019
+                                    <strong>June 2023
                                     </strong>
                                 </li>
-                                <li>Technologies:
+                                <li>Piece: The Fight with the Typhoon is a famous Guzheng solo piece, a dramatic depiction of fight of the Shanghai harbour proletariat against the forces of nature, while protecting the property of the people. Sunny performed it in the TCAAT Music Talent competition and won the 4th place.
                                     <strong> PCB design, surface-mount soldering, C programming
                                     </strong>
                                 </li>
                             </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Guzheng Performance</h2>
+                            <h4>The <a href="https://guzhengalive.com/guzheng-in-90-seconds">Guzheng</a> is a Chinese zither with 2500 years of history. Sunny started to learn Guzheng in since August 2022. </h4>
+                            <hr class="star-primary">
+                               <iframe width="560" height="315" src="https://www.youtube.com/embed/8KVh01Ofths?si=nOQWqvAB6lKt08X0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>June 2023
+                                    </strong>
+                                </li>
+                                <li>Piece: The Fight with the Typhoon is a famous Guzheng solo piece, a dramatic depiction of fight of the Shanghai harbour proletariat against the forces of nature, while protecting the property of the people. Sunny performed it in the TCAAT Music Talent competition and won the 4th place.
+                                    <strong> PCB design, surface-mount soldering, C programming
+                                    </strong>
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                 </div>
             </div>
         </div>
