--- a/index.html
+++ b/index.html
@@ -228,27 +228,16 @@
                                     <strong>June 2023
                                     </strong>
                                 </li>
-                                <li>Piece: The Fight with the Typhoon is a famous Guzheng solo piece, a dramatic depiction of fight of the Shanghai harbour proletariat against the forces of nature, while protecting the property of the people. Sunny performed it in the TCAAT Music Talent competition and won the 4th place.
-                                    <strong> PCB design, surface-mount soldering, C programming
-                                    </strong>
+                                <li><strong> The Fight with the Typhoon (战台风) </strong>  is a famous Guzheng solo piece, a dramatic depiction of fight of the Shanghai harbour proletariat against the forces of nature, while protecting the property of the people. Sunny performed it in the TCAAT Music Talent competition and won the 4th place.
                                 </li>
                             </ul>
-                        </div>
-                    </div>
-                    <div class="col-lg-8 col-lg-offset-2">
-                        <div class="modal-body">
-                            <h2>Guzheng Performance</h2>
-                            <h4>The <a href="https://guzhengalive.com/guzheng-in-90-seconds">Guzheng</a> is a Chinese zither with 2500 years of history. Sunny started to learn Guzheng in since August 2022. </h4>
-                            <hr class="star-primary">
-                               <iframe width="560" height="315" src="https://www.youtube.com/embed/8KVh01Ofths?si=nOQWqvAB6lKt08X0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/D4quo12nha8?si=JjI1ulbWMo1omtKb&amp;start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             <ul class="list-inline item-details">
                                 <li>Date:
-                                    <strong>June 2023
+                                    <strong>Feb 2023
                                     </strong>
                                 </li>
-                                <li>Piece: The Fight with the Typhoon is a famous Guzheng solo piece, a dramatic depiction of fight of the Shanghai harbour proletariat against the forces of nature, while protecting the property of the people. Sunny performed it in the TCAAT Music Talent competition and won the 4th place.
-                                    <strong> PCB design, surface-mount soldering, C programming
-                                    </strong>
+                                <li><strong>Wild Geese Descending on the Sandbank (平沙落雁) / Song of Siton (丝桐颂) Busy Weaving (纺织忙)</strong> Sunny performed in the level 4 test and got the excellent pass. 
                                 </li>
                             </ul>
                         </div>
