--- a/index.html
+++ b/index.html
@@ -180,28 +180,20 @@
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <div class="modal-body">
-                            <h2>WatCounts</h2>
+                            <h2>Violin Performance</h2>
                             <hr class="star-primary">
-                            <img src="images/watcountsdesign.png" class="img-responsive img-centered" alt="">
-                            <p> WatCounts is an occupancy tracking application designed for the University of Waterloo. 
-                                The system uses a Raspberry Pi with a camera to track the number of people entering and exiting the library.
-                                A mechanical enclosure was designed to hold the Pi and position the camera above the library door.
-                                I implemented human detection using the pre-trained OpenCV linear SVM, and I used a centroid tracking algorithm to determine the direction each person was moving in.
-                                The project was a success with over 90% tracking accuracy! View the code here: <a href="https://github.com/rebecca-butler/WatCounts">WatCounts</a>
-                            </p>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/hLpqQ5tq-wk?si=-REAT3RT7rWNuXk3" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             <ul class="list-inline item-details">
                                 <li>Date:
-                                    <strong>Sept - Dec 2020
+                                    <strong>Oct 2022
                                     </strong>
                                 </li>
-                                <li>Technologies:
-                                    <strong>Raspberry Pi, Python, Picamera, OpenCV, HOGCV
-                                    </strong>
+                                <li><strong> Fisherman's English Song (渔舟唱晚) </strong> This song is since 1930s, the most influential piece spread in China. The music depicts the beautiful scene of the sunset reflecting on vast expanses of blue waves, with fishermen leisurely enjoying themselves and fishing boats gradually drifting away with the tide. This ensemble played by Sunny and her sister Annie. They won the second plance of American Protege International Music Talent Competition Fall 2022 and performed in Carneige Hall summer 2023.
                                 </li>
                             </ul>
-                            <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                         </div>
                     </div>
+                    <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
                 </div>
             </div>
         </div>
