--- a/index.html
+++ b/index.html
@@ -223,13 +223,31 @@
                                 <li><strong> The Fight with the Typhoon (战台风) </strong>  is a famous Guzheng solo piece, a dramatic depiction of fight of the Shanghai harbour proletariat against the forces of nature, while protecting the property of the people. Sunny performed it in the TCAAT Music Talent competition and won the 4th place.
                                 </li>
                             </ul>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/q4sxn4k4Dk0?si=BjlS9SlxrmOgHRiY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>Dec 2023
+                                    </strong>
+                                </li>
+                                <li><strong>Along the Yili River (伊犁河畔) </strong> Sunny performed this piece in the level 7/10 test and got the excellent pass.
+                                </li>
+                            </ul>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/vvQBiT6yid0?si=3ZocavlLc3-4Rs5i" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>Dec 2023
+                                    </strong>
+                                </li>
+                                <li><strong>Harvest Drum (丰收锣鼓) </strong> Sunny performed this piece in the level 7/10 test and got the excellent pass.
+                                </li>
+                            </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/D4quo12nha8?si=JjI1ulbWMo1omtKb&amp;start=9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             <ul class="list-inline item-details">
                                 <li>Date:
                                     <strong>Feb 2023
                                     </strong>
                                 </li>
-                                <li><strong>Wild Geese Descending on the Sandbank (平沙落雁) / Song of Siton (丝桐颂) Busy Weaving (纺织忙)</strong> Sunny performed in the level 4 test and got the excellent pass. 
+                                <li><strong>Wild Geese Descending on the Sandbank (平沙落雁) / Song of Siton (丝桐颂) Busy Weaving (纺织忙)</strong> Sunny performed in the level 4/10 test and got the excellent pass. 
                                 </li>
                             </ul>
                         </div>
