--- a/index.html
+++ b/index.html
@@ -191,6 +191,16 @@
                                 <li><strong> Fisherman's English Song (渔舟唱晚) </strong> This song is since 1930s, the most influential piece spread in China. The music depicts the beautiful scene of the sunset reflecting on vast expanses of blue waves, with fishermen leisurely enjoying themselves and fishing boats gradually drifting away with the tide. This ensemble played by Sunny and her sister Annie. They won the second plance of American Protege International Music Talent Competition Fall 2022 and performed in Carneige Hall summer 2023.
                                 </li>
                             </ul>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/xh7MgI5pEKg?si=sv6ngZooveZymnzP" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>Nov 2022
+                                    </strong>
+                                </li>
+                                <li><strong> Fisherman's English Song </strong> Sunny and Annie Performed this song in the MTAC Palo Alto Branch Autumn Festival and got excellent score from the judges.
+                                </li>
+                            </ul>
+                            <img src="images/IMG_2882.JPG" width="462px">
                         </div>
                     </div>
                     <button type="button" class="btn btn-default" data-dismiss="modal"><i class="fa fa-times"></i> Close</button>
@@ -248,6 +258,16 @@
                                     </strong>
                                 </li>
                                 <li><strong>Wild Geese Descending on the Sandbank (平沙落雁) / Song of Siton (丝桐颂) Busy Weaving (纺织忙)</strong> Sunny performed in the level 4/10 test and got the excellent pass. 
+                                </li>
+                            </ul>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/SBhm4epAFmU?si=wlhNILf37ya_VDmW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>May 2023
+                                    </strong>
+                                </li>
+                                <li><strong>Harvest Drum (丰收锣鼓) </strong> Sunny (back row right 3) collaborated with her Guzheng instructor and fellow team members for a Mother's Day performance.
+ xxWild Geese Descending on the Sandbank (平沙落雁) / Song of Siton (丝桐颂) Busy Weaving (纺织忙)</strong> Sunny performed in the level 4/10 test and got the excellent pass.
                                 </li>
                             </ul>
                         </div>
