--- a/index.html
+++ b/index.html
@@ -200,6 +200,14 @@
                                 <li><strong> Fisherman's English Song </strong> Sunny and Annie Performed this song in the MTAC Palo Alto Branch Autumn Festival and got excellent score from the judges.
                                 </li>
                             </ul>
+                            <div class="row">
+  								<div class="column">
+    								<img src="images/IMG_2882.JPG" alt="Snow" style="width:100%">
+  								</div>
+  								<div class="column">
+    								<img src="images/carneige.JPG" alt="Forest" style="width:100%">
+  								</div>
+							</div>
                             <img src="images/IMG_2882.JPG" width="462px">
                         </div>
                     </div>
