--- a/index.html
+++ b/index.html
@@ -200,12 +200,30 @@
                                 <li><strong> Fisherman's English Song </strong> Sunny and Annie Performed this song in the MTAC Palo Alto Branch Autumn Festival and got excellent score from the judges.
                                 </li>
                             </ul>
+                            <style>
+* {
+  box-sizing: border-box;
+}
+
+.column {
+  float: left;
+  width: 33.33%;
+  padding: 5px;
+}
+
+/* Clearfix (clear floats) */
+.row::after {
+  content: "";
+  clear: both;
+  display: table;
+}
+</style>
                             <div class="row">
   								<div class="column">
-    								<img src="images/IMG_2882.JPG" alt="Snow" style="width:30%">
+    								<img src="images/IMG_2882.JPG" alt="Snow" style="width:100%">
   								</div>
   								<div class="column">
-    								<img src="images/carneige.JPG" alt="Forest" style="width:30%">
+    								<img src="images/carneige.JPG" alt="Forest" style="width:100%">
   								</div>
 							</div>
                         </div>
