--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
 .column {
   float: left;
-  width: 50%;
+  width: 33%;
   padding: 5px;
 }
 
@@ -225,6 +225,9 @@
   								<div class="column">
     								<img src="images/carneige.JPG" alt="Forest" style="width:60%">
   								</div>
+                                <div class="column">
+                                    <img src="images/sunny_annie.jpg" alt="Forest" style="width:60%">
+                                </div>
 							</div>
                         </div>
                     </div>
