--- a/index.html
+++ b/index.html
@@ -252,6 +252,24 @@
                                 <li><strong> Beethoven Virus </strong> Sunny performed this piece with her classmates Bryan, Liam, Ted in the Variety show and in two nuring home.
                                 </li>
                             </ul>
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/lmOsfPn9nbo?si=3cq0_p0jdV-LbxI8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>Apr 2022
+                                    </strong>
+                                </li>
+                                <li><strong> Concerto in G Major, Op. 24, 1st Movement </strong> Sunny auditioned for Camilla Kolchinsky Orchestra in GSYO.
+                                </li>
+                            </ul>
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/HpEVUkUPrJA?si=jP-orw73RPaWiqFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
+                            <ul class="list-inline item-details">
+                                <li>Date:
+                                    <strong>Feb 2018
+                                    </strong>
+                                </li>
+                                <li><strong> Sonata No.4 in D Major, HWV 371 Allegro </strong> Sunny auditioned for California Youth Symphony.
+                                </li>
+                            </ul>
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/WvNptgDsaDo?si=a4JaBBkWRL4K0XqE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             <ul class="list-inline item-details">
                                 <li>Date:
@@ -361,16 +379,7 @@
                         <div class="modal-body">
                             <h2>Pothole Finder</h2>
                             <hr class="star-primary">
-                            <video width="700px" controls>
-                               <source src="https://cdn.glitch.com/ff1ca69f-ddf6-4632-8378-34074e19fe2e%2Fvideo-1550421287.mp4?v=1567031757669" type="video/mp4">
-                            </video>
-                            <p><br> The Pothole Finder uses an Arduino board with an accelerometer to detect sudden changes in the downward/upward acceleration of a car, indicating that it has hit a pothole.
-                               When potholes are detected, the GPS sensor records the coordinates and sends them to an SQL database. 
-                               A Python script then uses this data to plot locations on a map using the Google Maps Plotter API.
-                               <br><br>
-                               I completed this project during the Make UofT Hackathon in a group of 3. My role was to write the Python script to collect data from the SQL database.
-                               See the code here: <a href="https://github.com/rebecca-butler/Pothole-Finder">Pothole Finder</a>
-                            </p>
+                            
                             <ul class="list-inline item-details">
                                 <li>Date:
                                     <strong>Feb 2019
