--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/HpEVUkUPrJA?si=jP-orw73RPaWiqFo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             <ul class="list-inline item-details">
                                 <li>Date:
-                                    <strong>Feb 2018
+                                    <strong>Apr 2021
                                     </strong>
                                 </li>
                                 <li><strong> Sonata No.4 in D Major, HWV 371 Allegro </strong> Sunny auditioned for California Youth Symphony.
@@ -273,7 +273,7 @@
                             <iframe width="560" height="315" src="https://www.youtube.com/embed/WvNptgDsaDo?si=a4JaBBkWRL4K0XqE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
                             <ul class="list-inline item-details">
                                 <li>Date:
-                                    <strong>Feb 2018
+                                    <strong> 2020-2021
                                     </strong>
                                 </li>
                                 <li><strong> Concerto for Two Violins in D minor </strong> Sunny's recording for fun during covid.
